Sunday, January 18, 2009
	Chris Thielen:
		* Fixed a bug in Image where images that weren't powers of two were being incorrectly scaled

Tuesday October 14, 2008
	Chris Thielen:
		* Added new INSTALL file from Leon Vayman
		* Fixed a bug/typo in configure.in, thanks Leon Vayman for the report/fix

Sunday October 12, 2008
	Chris Thielen:
		* Fixed an issue with the way we ensure powers of two: added tw,th (texture scaling coords) to Image
		  to account for this issue (when we expand the texture canvas, we need to set the scaling coords so
		  it looks as though we didn't do this)
		* Fixed a bug with Coordinate where it would enforce boundaries that hadn't been set
		* Continued UI work, getting mouse focus features down so clicking buttons work, then continue on
		  with additional widgets
	Matthew Zweig:
		* Changed scaling and coloring in the Hud Radar.  Ships are Red, Planets are Blue, else grey.

Monday Oct 7, 2008:
	Chris Thielen:
		* Began work on epiard. Need to research lock-free queues, brush up on multi-threaded programming and get basic multi-player flying around working nicely

Sunday May 11, 2008:
	Chris Thielen:
		* Enhanced Input class to allow event lists to support sub-input systems. UI now works alongside game simulation without pausing
		* Worked on UI - Implemented widget children. Started work on buttons, fixing window transparency issues

Friday April 25, 2008:
	Chris Thielen:
		* Implemented dragging of all widgets, the --ui-demo now lets you drag the window around

Tuesday April 22, 2008:
	Chris Thielen:
		* Implemented Image::ExpandCanvas(), which is called automatically for OpenGL surfaces that do not have
		  dimensional values that are powers of twos (required on a lot of OpenGL cards).
		* Implemented Image::DrawAbsoluteTiled, using a lot in GUI skinning. There's some oddities still when it tiles something
		  with a 1 pixel dimension
		* Updated UI::Window to the new GUI theme

Monday April 21, 2008:
	Chris Thielen: